updating the api to align with reconfiguration idea

--- a/applications/polynomials/smo/test_polynomials.ipynb
+++ b/applications/polynomials/smo/test_polynomials.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.testproblems import generate_random_prob\n",
+    "from utils.randomstructure import generate_random_prob\n",
     "from utils.polycasebuilder import generate_random_polynomials, get_arg_mapping\n",
     "from trash.inputresolver import reassigneq\n",
     "from graph.graphutils import edges_to_Ein_Eout, sources\n",
-    "from torchengine import AnalyticalSet, EliminateAnalysis, Function, EliminateAnalysisMergeResiduals\n",
+    "from engine.torchengine import AnalyticalSet, EliminateAnalysis, Function, EliminateAnalysisMergeResiduals\n",
+    "from engine.torchdata import generate_optim_functions\n",
     "from scipy.optimize import minimize\n",
     "import sympy as sp\n",
     "import numpy as np\n",
@@ -20,13 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_eqs, n_vars, sparsity, seed1, seed2 = 10, 13, 1.1, 42, 12345 #1.7\n",
     "eqv, varinc, dout = generate_random_prob(n_eqs, n_vars, seed1, sparsity)\n",
-    "polynomials, var_mapping, edges, tree = generate_random_polynomials(eqv, dout, n_eqs)\n",
+    "polynomials, var_mapping, edges, tree, output_set = generate_random_polynomials(eqv, dout, n_eqs)\n",
     "symb_mapping = get_arg_mapping(var_mapping, symbol_map=True)\n",
     "\n",
     "indices = {idx: torch.tensor([idx]) for idx in symb_mapping.keys()}\n",
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,49 +61,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "optim_funcs_MDF = EliminateAnalysis([sets[k].analysis for k in sorted(sets.keys())],\n",
-    "                                [objective, lambda x: torch.tensor([]), lambda x: torch.tensor([])])\n",
+    "# optim_funcs_MDF = EliminateAnalysis([sets[k].analysis for k in sorted(sets.keys())],\n",
+    "#                                 [objective, lambda x: torch.tensor([]), lambda x: torch.tensor([])])\n",
     "equality_constraints_AAO = EliminateAnalysisMergeResiduals([],[sets[k].residual for k in sorted(sets.keys())])\n",
-    "optim_funcs_AAO = EliminateAnalysis([],\n",
-    "                                [objective, lambda x: torch.tensor([]), equality_constraints_AAO])"
+    "optim_funcs_AAO = EliminateAnalysis(functions=[objective, equality_constraints_AAO])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_optim_functions(optim_funcs, solvefor_indices, x):\n",
-    "    def eval_all(y):\n",
-    "        x[solvefor_indices] = torch.from_numpy(y).to(x.dtype)\n",
-    "        objval, ineqval, eqval = optim_funcs(x)\n",
-    "        return objval.item(), -ineqval, -eqval\n",
-    "    \n",
-    "    def obj_function(y):\n",
-    "        objval, _, _ = eval_all(y)\n",
-    "        return objval\n",
-    "\n",
-    "    def ineq_function(y=None):\n",
-    "        _, ineqval, _ = eval_all(y)\n",
-    "        return ineqval\n",
-    "    \n",
-    "    def eq_function(y=None):\n",
-    "        _, _, eqval = eval_all(y)\n",
-    "        return eqval\n",
-    "\n",
-    "    xguess = x[solvefor_indices].numpy()\n",
-    "    \n",
-    "    return xguess, obj_function, ineq_function, eq_function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,9 +84,16 @@
     "bnds_problem_AAO = [(0,10) for elt in optim_indices_AAO]\n",
     "#set random seed to be reproducible\n",
     "torch.manual_seed(43)\n",
-    "x0 = torch.rand(n_vars, dtype=torch.float64)\n",
-    "xguess, obj_function, ineq_function, eq_function = generate_optim_functions(optim_funcs_AAO, optim_indices_AAO, x0)\n",
-    "constraints = [{'type': 'eq', 'fun': eq_function}]"
+    "x0 = torch.rand(n_vars, dtype=torch.float64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xguess, obj_function, ineq_function, eq_function, dobj, dineq, deq, hobj = generate_optim_functions(optim_funcs_AAO, optim_indices_AAO, x0, inequality_direction='positive-null', objective=0, equalities=1)"
    ]
   },
   {
@@ -148,17 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.25, 982.26, 356.97, 1.95, -0.2, -0, 8.66, 6851.16, -11.9, 0.03,\n",
-       "       -8310.65, -0, 7.93])"
+       "array([0.63, 0.37, 0.18, 0.73, 0.98, 0.51, 0.15, 0.3, 0.42, 0.72, 0.86,\n",
+       "       0.59, 0.05])"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
