--- a/applications/sobieskijet/sobieski_jet.ipynb
+++ b/applications/sobieskijet/sobieski_jet.ipynb
@@ -2,24 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from compute import Var, Par\n",
-    "from modeling.api import Model, adda, addsolver\n",
+    "from modeling.compute import Var\n",
+    "from modeling.gen3.nesting import Model, adda, addsolver, evalexpr\n",
     "import sympy as sp\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "def PFi(idx, *args):\n",
     "    Aij = np.array(((0, 0.3970, 0.8152, 0.9230, 0.1108),\n",
     "                 (0.4252, 0, 0.6357, 0.7435, 0.1138),\n",
@@ -57,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +64,7 @@
        "3.83321"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,13 +75,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Model(rootname='root')\n",
     "m = model.root\n",
-    "idbyname = True\n",
     "tc = Var('t_c', unit='')\n",
     "Sref = Var(r'S_{ref}', unit='m^2')\n",
     "AR = Var('AR', unit='')\n",
@@ -92,7 +89,7 @@
     "WT = Var('W_T', unit='N')\n",
     "WW = Var('W_W', unit='N')\n",
     "x = Var('x', unit='')\n",
-    "struct = addsolver(m, name='struct', idbyname=idbyname)\n",
+    "struct = addsolver(m, name='struct', idbyname=True)\n",
     "# external\n",
     "WFO = Var(r'W_{FO}', unit='N')\n",
     "WO = Var(r'W_O', unit='N')\n",
@@ -101,14 +98,13 @@
     "t = adda(struct, 't', tc*Sref/sp.sqrt(Sref*AR))\n",
     "b = adda(struct, 'b', sp.sqrt(Sref*AR/2))\n",
     "R = adda(struct, 'R', (1+2*l)/(3*(1+l)))\n",
-    "adda(struct, '\\\\theta', lambda *args: PFi('theta', *args),\n",
-    "    (x, b, R, L))\n",
+    "adda(struct, '\\\\theta', lambda *args: PFi('theta', *args), (x, b, R, L))\n",
     "Fo1 = adda(struct, 'Fo1', lambda *args: PFi('Fo1', *args), (x,))\n",
-    "WFW = adda(struct, 5*Sref/18*2/3*t)\n",
-    "WF = adda(struct, WFW+WFO)\n",
-    "WT = adda(struct, WO+WW+WF+WE)\n",
+    "WFW = adda(struct, 'WFW', 5*Sref/18*2/3*t, unit='N', forceunit=True)\n",
+    "WF = adda(struct, 'W_F', WFW+WFO, unit='N')\n",
+    "WT = adda(struct, 'W_T', WO+WW+WF+WE, unit='N')\n",
     "WW = adda(struct, 'W_W', 0.0051*(WT*NZ)**0.557*Sref**0.649*\n",
-    "    AR**0.5*tc**-0.4*(1+L)**0.1*(0.1875*Sref)**0.1/sp.cos(L)*Fo1)"
+    "    AR**0.5*tc**-0.4*(1+L)**0.1*(0.1875*Sref)**0.1/sp.cos(L)*Fo1, unit='N', forceunit=True)"
    ]
   }
  ],
@@ -128,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4,
   "vscode": {
