--- a/applications/polynomials/smo/test_smo_poly.ipynb
+++ b/applications/polynomials/smo/test_smo_poly.ipynb
@@ -10,14 +10,11 @@
     "import numpy as np\n",
     "from collections import OrderedDict\n",
     "from graph.matrixview import render_incidence\n",
-    "from engine.torchengine import AnalyticalSetSympy, EliminateAnalysisMergeResiduals, EliminateAnalysis, FunctionSympy,get_analysis_structure, ElimResidual, ParallelResiduals, ParallelAnalysis, ipoptsolver\n",
+    "from engine.torchengine import AnalyticalSetSympy, EliminateAnalysisMergeResiduals, EliminateAnalysis, FunctionSympy,get_analysis_structure, ElimResidual, ParallelResiduals, ParallelAnalysis, ipoptsolvercon\n",
     "from engine.torchdata import load_file, process_expression, load_vals, generate_optim_functions, print_formatted_table, perturb\n",
     "from engine.loaddata import process_json\n",
     "from functools import partial\n",
-    "from scipy.optimize import minimize\n",
     "from collections import namedtuple\n",
-    "import sympy as sp\n",
-    "import cyipopt\n",
     "# Set the print options\n",
     "np.set_printoptions(formatter={'float': lambda x: \"{:0.2f}\".format(x).rstrip('0').rstrip('.')})"
    ]
@@ -29,8 +26,8 @@
    "outputs": [],
    "source": [
     "data = load_file('testproblems')\n",
-    "problem_id = 0\n",
-    "fid, fdata = list(data.items())[problem_id]\n",
+    "problem_id = 2\n",
+    "_, fdata = list(data.items())[problem_id]\n",
     "polynomials, indices, edges, objective = process_json(fdata)\n",
     "idxrev = {var.item():key for key,var in indices.items()}\n",
     "\n",
@@ -88,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +124,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "problem_id = 2 \n",
+    "n = len(indices)\n",
+    "torch.manual_seed(2)\n",
+    "xs = torch.rand(n, dtype=torch.float64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,38 +145,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xs = torch.tensor([ 1.0000,  1.0000,  4.0000, -2.2670,  6.9916,  1.0000, -0.0420,  1.0000, 2.4799, -1.2697, -0.4501, -2.0834,  1.0000, -6.5000,  2.4820], dtype=torch.float64)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x0 = perturb(xs, 10, optim_indices, seed=12)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_0   x_1    x_12    x_5     x_7     x_10   x_11    x_3     x_6    x_8    x_9     x_13    x_4    x_14    x_2   \n",
-      "1     1      1       1       1       -0.45  -2.083  -2.267  -0.042 2.48   -1.27   -6.5    6.992  2.482   4     \n",
-      "0.932 11.461 -18.108 -11.056 -12.207 -0.351 -12.415 -18.679 0.221  -0.192 -13.951 -16.059 120.17 -20.028 33.664\n"
+      "x_0   x_10  x_11  x_13  x_2   x_3  x_9   x_4   x_5   x_6  x_8   x_1   x_14  x_7   x_12\n",
+      "0.918 0.082 0.683 0.808 0.709 0.54 0.462 0.913 0.526 0.12 0.693 0.097 0.733 0.267 0.62\n",
+      "0.918 0.082 0.683 0.808 0.709 0.54 0.462 0.913 0.526 0.12 0.693 0.097 0.733 0.267 0.62\n"
      ]
     }
    ],
    "source": [
+    "x0 = perturb(xs, 0, optim_indices, seed=12)\n",
     "print_formatted_table([xs, x0], indices, idxrev, subset=optim_indices)"
    ]
   },
@@ -180,34 +172,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# MAKE SURE TO SET INEQUALITY DIRECTION, it is different for scipy and ipopt\n",
     "xguess, obj_function, ineq_function, eq_function, dobj, dineq, deq, hobj = generate_optim_functions(P,\n",
-    "    optim_indices, x0, inequality_direction='negative-null', \n",
-    "    objective=objective_idx, residuals=residual_idx, equalities=equality_idx)\n",
-    "ineqlen, eqlen = len(ineq_function(xguess)), len(eq_function(xguess))\n",
-    "constraints = [{'type': 'eq', 'fun': eq_function, 'jac': deq}] if eqlen >= 1 else []\n",
+    "        optim_indices, x0, inequality_direction='negative-null', \n",
+    "        objective=objective_idx, residuals=residual_idx, equalities=equality_idx)\n",
     "bnds_problem = [(None, None) for elt in optim_indices]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([-10.94, -5.7, -34.63, 6.43, -12.52, 1269.7, -3.03, 2.97, -12.6,\n",
-       "        52.19]),\n",
+       "(array([-0.34, 0.27, 1.2, -0.9, 0.7, 0.08, 0.96, 0.93, -0.17, -0.08]),\n",
        " array([], dtype=float32),\n",
-       " 794.3021034745311)"
+       " 1.0715371477653555)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,64 +214,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def all_constraints(x):\n",
-    "    return np.concatenate([ineq_function(x), eq_function(x)])\n",
-    "\n",
-    "def all_constraints_jac(x):\n",
-    "    if eqlen == 0:\n",
-    "        if ineqlen != 0:\n",
-    "            return dineq(x)\n",
-    "        else:\n",
-    "            return np.tensor([])\n",
-    "    elif ineqlen == 0:\n",
-    "        return deq(x)\n",
-    "    return np.concatenate([dineq(x), deq(x)], axis=0)\n",
-    "\n",
-    "OptProblem = namedtuple('OptProblem', ['objective', 'constraints', 'gradient', 'jacobian', 'intermediate'])\n",
-    "\n",
-    "lb,ub = zip(*bnds_problem)\n",
-    "cl = np.concatenate([-np.inf*np.ones(ineqlen), np.zeros(eqlen)])\n",
-    "cu = np.concatenate([np.zeros(ineqlen), np.zeros(eqlen)])\n",
-    "\n",
-    "storeiter = [0]\n",
-    "\n",
-    "def logiter(alg_mod, iter_count, obj_value, inf_pr, inf_du, mu, d_norm, regularization_size, alpha_du, alpha_pr, ls_trials):\n",
-    "    storeiter[0] = iter_count\n",
-    "\n",
-    "# define the problem\n",
-    "probinfo = OptProblem(obj_function, all_constraints, dobj, all_constraints_jac, logiter)\n",
-    "\n",
-    "prob = cyipopt.Problem(n=len(xguess), m=len(cu), lb=lb, ub=ub, cl=cl, cu=cu, \n",
-    "                       problem_obj=probinfo)\n",
-    "prob.add_option('max_iter', 8000)\n",
-    "#prob.add_option('acceptable_tol', 1e-6)"
+    "xsol, info,storeiter,elapsed_time = ipoptsolvercon(xguess, obj_function, ineq_function, eq_function, dobj, dineq, deq, bnds_problem)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xsol, optinfo = prob.solve(xguess)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[75]"
+       "0.9691691803346383"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj_function(xsol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left(x_{0} - 1\\right)^{2} + \\left(x_{10} - 1\\right)^{2} + \\left(x_{11} - 1\\right)^{2} + \\left(x_{13} - 1\\right)^{2} + \\left(x_{2} - 1\\right)^{2}$"
+      ],
+      "text/plain": [
+       "(x_0 - 1)**2 + (x_10 - 1)**2 + (x_11 - 1)**2 + (x_13 - 1)**2 + (x_2 - 1)**2"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "objective.expression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[100]"
+      ]
+     },
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,15 +286,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_0 x_1 x_12 x_5 x_7 x_10  x_11   x_3    x_6    x_8  x_9   x_13 x_4   x_14  x_2\n",
-      "1   1   1    1   1   -0.45 -2.083 -2.267 -0.042 2.48 -1.27 -6.5 6.992 2.482 4  \n"
+      "x_0   x_10  x_11  x_13  x_2 x_3   x_9 x_4   x_5  x_6   x_8    x_1    x_14  x_7   x_12 \n",
+      "1.003 0.016 1.015 0.997 1   1.667 0.6 5.333 -0.4 0.153 -0.334 13.965 2.104 2.377 3.258\n"
      ]
     }
    ],
@@ -311,25 +304,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(x_11, 5*x_10*x_7/3 - 4/3),\n",
-       " (x_8, 3*(-3*x_6 - 2)/(x_12*x_3)),\n",
-       " (x_6, (5*x_0 - 6)/(9*x_11*x_9)),\n",
-       " (x_13, -2*x_0*x_5 - 9/2),\n",
-       " (x_4, (-x_8 - 2/3)/x_10),\n",
-       " (x_14, 4*(-x_1*x_3*x_9 - 1)/(3*x_11)),\n",
-       " (x_9, 4/(7*x_10)),\n",
-       " (x_2, 4),\n",
-       " (x_10, 3*(1 - 3*x_3)/(8*x_13)),\n",
-       " (x_3, (3*x_14 + 2)/(2*x_11))]"
+       "[(x_3, 5/3),\n",
+       " (x_9, 3/(5*x_2)),\n",
+       " (x_8, (-x_5*x_6 - 9)/(5*x_0*x_4)),\n",
+       " (x_6, 9/(7*x_1*x_9)),\n",
+       " (x_1, 7/(6*x_10*x_4)),\n",
+       " (x_7, (3*x_1*x_11 + 3*x_6 + 2)/(9*x_14)),\n",
+       " (x_14, 5/x_7),\n",
+       " (x_5, -2/5),\n",
+       " (x_12, 1/(2*x_6)),\n",
+       " (x_4, -4*x_13*x_8 + 4)]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,15 +333,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_0 x_1 x_12 x_5 x_7 x_10  x_11   x_3    x_6    x_8  x_9   x_13 x_4   x_14  x_2\n",
-      "1   1   1    1   1   -0.45 -2.083 -2.267 -0.042 2.48 -1.27 -6.5 6.992 2.482 4  \n"
+      "x_0   x_10  x_11  x_13  x_2 x_3   x_9 x_4   x_5  x_6   x_8    x_1    x_14  x_7   x_12 \n",
+      "1.003 0.016 1.015 0.997 1   1.667 0.6 5.333 -0.4 0.153 -0.334 13.965 2.104 2.377 3.258\n"
      ]
     }
    ],
