allow for function sets to be constants (floats, ints...)

--- a/applications/satellite/gen7/satprob.ipynb
+++ b/applications/satellite/gen7/satprob.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "16352d1c",
    "metadata": {},
    "outputs": [],
@@ -50,6 +50,31 @@
     "\n",
     "MDA = MFunctionalSet(Orbit, Power, Payload)\n",
     "FPF = MDA.subsetof(X_r <= 5).minimize(m_p+m_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5443a97d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m_b   P_T   d   m_A E_b    P_c    T   \n",
+      "245.7 0.285 0.6 0.5 1.23e5 12.285 6000\n"
+     ]
+    }
+   ],
+   "source": [
+    "_,_,_,_, indices = Power.gather_sets()\n",
+    "f = Power.build()\n",
+    "x0 = {\"d\": 0.6, \"T\": 6000}\n",
+    "xidxed = load_vals(x0, indices, isdict=True)\n",
+    "f.analysis(xidxed)\n",
+    "idxrev = {var.item():key for key,var in indices.items()}\n",
+    "print_formatted_table([f.analysis(xidxed)], indices, idxrev)"
    ]
   },
   {
