some rearrangements and bugfix for prob without ineq

--- a/applications/satmini/satmini_cvx.ipynb
+++ b/applications/satmini/satmini_cvx.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f894ac27-6288-403d-b6fc-848f0ffb4db3",
    "metadata": {
     "execution": {
@@ -99,7 +99,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e67b96f2-7d8a-47eb-9736-3273a0893158",
    "metadata": {
     "execution": {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "b27d7d67-75ce-4149-a65a-b9ff508559c6",
    "metadata": {
     "execution": {
@@ -150,31 +150,33 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        Variable      Value\n",
-      "0          $$A$$      0.041\n",
-      "1          $$D$$       0.67\n",
-      "2          $$h$$  4.000×10⁵\n",
-      "3  $$P_{comms}$$      2.847\n",
-      "4    $$P_{bus}$$     16.874\n",
-      "5          $$C$$  1.530×10⁴\n"
-     ]
+     "data": {
+      "text/markdown": [
+       "| $$A$$ | $$D$$ | $$h$$ | $$P_{comms}$$ | $$P_{bus}$$ | $$C$$ |\n",
+       "| --- | --- | --- | --- | --- | --- |\n",
+       "| 0.041 | 0.67 | 4.000×10⁵ | 2.847 | 16.874 | 1.530×10⁴ |"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "from IPython.display import display, Markdown\n",
     "variables = {'$$A$$':A, '$$D$$':D, '$$h$$':h, '$$P_{comms}$$':Pc, '$$P_{bus}$$':Pb, '$$C$$':problem.objective}\n",
     "formatted_vars = [(var_name, prettyprintval(var.value)) for var_name,var in variables.items()]\n",
-    "print(pd.DataFrame(formatted_vars, columns=['Variable', 'Value']))\n",
-    "# # Initialize the markdown table with headers\n",
-    "# md_string = \"| Variable | Value |\\n\"\n",
-    "# md_string += \"|----------|-------|\\n\"\n",
+    "#print(pd.DataFrame(formatted_vars, columns=['Variable', 'Value']))\n",
+    "# Initialize the markdown table with headers\n",
+    "header_row = \"| \" + \" | \".join([var for var, _ in formatted_vars]) + \" |\"\n",
+    "separator_row = \"| \" + \" | \".join([\"---\"] * len(formatted_vars)) + \" |\"\n",
+    "value_row = \"| \" + \" | \".join([val for _, val in formatted_vars]) + \" |\"\n",
     "\n",
-    "# # Add rows for each variable in the dictionary\n",
-    "# for var, value in formatted_vars:\n",
-    "#     md_string += f\"| {var} | {value} |\\n\"\n",
-    "# display(Markdown(md_string))"
+    "md_string = header_row + \"\\n\" + separator_row + \"\\n\" + value_row\n",
+    "\n",
+    "display(Markdown(md_string))"
    ]
   }
  ],
