--- a/applications/sellar/gen7/sellar_gen7.ipynb
+++ b/applications/sellar/gen7/sellar_gen7.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "c4e56a51",
    "metadata": {},
    "outputs": [],
    "source": [
     "from modeling.gen6.api import symbolic, exp\n",
     "from modeling.gen7.api7 import MFunctionalSet, MFunctionalSetLeaf\n",
-    "from engine.torchdata import load_vals, print_formatted_table\n",
+    "from engine.torchdata import print_formatted_table\n",
     "import numpy as np\n",
-    "import torch\n",
     "from scipy import optimize"
    ]
   },
