updated functionality to allow for reconfig and order from elimination groups

--- a/applications/satmini/satmini_gen7.ipynb
+++ b/applications/satmini/satmini_gen7.ipynb
@@ -23,9 +23,9 @@
    "outputs": [],
    "source": [
     "A, Pb, Pc, D, h, R = symbolic('A', 'Pb', 'Pc', 'D', 'h', 'R')\n",
-    "D1 = MFunctionalSetLeaf(A == (Pb+Pc)/483.307)\n",
-    "D2 = MFunctionalSetLeaf(Pb == 10*sqrt(Pc))\n",
-    "D3 = MFunctionalSetLeaf(Pc == R*h**2/D**2*1e-18)\n",
+    "D1 = MFunctionalSetLeaf(A == (Pb+Pc)/483.307, idvals=[0])\n",
+    "D2 = MFunctionalSetLeaf(Pb == 10*sqrt(Pc), idvals=[1])\n",
+    "D3 = MFunctionalSetLeaf(Pc == R*h**2/D**2*1e-18, idvals=[2])\n",
     "FPF = MFunctionalSet(D1,D2,D3).subsetof(R>=8e6, h>=400e3).minimize(\n",
     "    2500*D**2+12000*(A+1)+100*Pb)\n",
     "FPF_MDF = FPF.config(elim=[D3, D2, D1])"
@@ -34,6 +34,33 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "b0d3b495",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<modeling.gen7.api7.MFunctionalSet at 0x19433aeddc0>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# rearrange and specify new order\n",
+    "output_set = {0: Pb, 1: Pc}\n",
+    "elim_order = [{0}, {1, 2}]\n",
+    "FPF.config_from_order(elim_order)\n",
+    "#FPF.reconfigure(output_set)\n",
+    "# FPFr = FPF.reconfigure(output_set)\n",
+    "# FPFr.supersets[2].supersets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "001a2ce2",
    "metadata": {},
    "outputs": [],
@@ -44,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a07f4157",
    "metadata": {},
    "outputs": [],
@@ -55,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "2bc98e6c",
    "metadata": {},
    "outputs": [],
@@ -69,19 +96,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "aefd9098",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R      h      A    D    Pc   Pb   \n",
-      "8.00e6 4.00e5 0.04 0.67 2.85 16.87\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print_formatted_table([np.round(xsolfull,2)], idxs, idxrev)"
    ]
