new small example running for solver config demo

--- a/applications/thrustmini_solve/thrustmini_gen7.ipynb
+++ b/applications/thrustmini_solve/thrustmini_gen7.ipynb
@@ -2,22 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6c3872dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modeling.gen6.api import symbolic, sqrt\n",
+    "from modeling.gen6.api import symbolic\n",
     "from modeling.gen7.api7 import MFunctionalSet, MFunctionalSetLeaf\n",
-    "from engine.torchdata import print_formatted_table, load_vals, ExpandVector\n",
+    "from engine.torchdata import print_formatted_table, load_vals\n",
     "from graph.matrixview import render_incidence\n",
     "from graph.graphutils import default_tree, all_edges, all_variables\n",
     "from graph.operators import reformulate\n",
     "from graph.workflow import order_from_tree\n",
     "from presolver.tearing import dir_graph, min_arc_set_assign\n",
-    "from scipy import optimize\n",
-    "import numpy as np\n",
-    "import torch"
+    "import numpy as np"
    ]
   },
   {
