fixed parallel for miltivar sets; testing with pearl-mini

--- a/applications/pearl/pearltest.ipynb
+++ b/applications/pearl/pearltest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +10,8 @@
     "from modeling.compute import create_vars\n",
     "from numpy import pi\n",
     "import numpy as np\n",
-    "from coupledgrad import pure_functions, coupled_functions\n",
-    "from coupledgrad import solver, concat, compose, eliminate, couplingvars\n",
+    "from foundations.coupledgrad import pure_functions, coupled_functions\n",
+    "from foundations.coupledgrad import solver, concat, compose, eliminate, couplingvars\n",
     "np.set_printoptions(suppress=True)"
    ]
   },
