restructuring and deleting old code

--- a/minimdo/modeling/gen3/mergemodels.ipynb
+++ b/minimdo/modeling/gen3/mergemodels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fa33f852-d0d8-43bc-8c01-8cdd358c181d",
    "metadata": {
     "execution": {
@@ -16,13 +16,12 @@
    },
    "outputs": [],
    "source": [
-    "from modeling.gen3.nesting import Model, adda, addobj, addsolver, merge\n",
-    "from modeling.compute import Var"
+    "from modeling.gen3.nesting import Var, Model, adda, addobj, addsolver, merge"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6b549fa3-8f2f-46bb-bfbf-14a40eeaa7ad",
    "metadata": {
     "execution": {
@@ -45,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9381985d-08fe-4baa-a72d-19bc1a1513d7",
    "metadata": {
     "execution": {
@@ -61,13 +60,13 @@
     {
      "data": {
       "text/latex": [
-       "$a=2 \\ (x=1 ,y=1 )$"
+       "$a=2 \\ (y=1 ,x=1 )$"
       ],
       "text/plain": [
        "a"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,45 +77,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "56c2e18c-c323-4737-97bb-47e0777f2c29",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-07-16T22:37:38.650252Z",
-     "iopub.status.busy": "2022-07-16T22:37:38.650252Z",
-     "iopub.status.idle": "2022-07-16T22:37:38.656746Z",
-     "shell.execute_reply": "2022-07-16T22:37:38.656276Z",
-     "shell.execute_reply.started": "2022-07-16T22:37:38.650252Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "id": "1be69e62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(({0: ('x',), 1: ('x', 'y'), 2: ('y', 'x')}, {0: (1,), 1: ('a',), 2: ('b',)}),\n",
+       " (OrderedDict([(0, 1), (1, 1), (2, 2)]), {2: 1}, {}))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "edges,tree = model.generate_formulation()"
+    "edges,tree = model.generate_formulation()\n",
+    "edges_new = {0: ('x',), 1: ('x', 'y')}, {0:(1,),1:('a',)}\n",
+    "\n",
+    "merge((edges,tree), edges_new, tree)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5f6988b2-81cb-4c20-869c-3ab580a33062",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-07-16T22:37:39.079946Z",
-     "iopub.status.busy": "2022-07-16T22:37:39.079946Z",
-     "iopub.status.idle": "2022-07-16T22:37:39.092046Z",
-     "shell.execute_reply": "2022-07-16T22:37:39.090947Z",
-     "shell.execute_reply.started": "2022-07-16T22:37:39.079946Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "edges_new = {0: ('x',), 1: ('x', 'y')}, {0:(1,),1:('a',)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "93bf3897-6b5a-47aa-b35e-923273899295",
    "metadata": {
     "execution": {
@@ -135,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ade325fa-c3a3-40ee-b970-0be866929354",
    "metadata": {
     "execution": {
@@ -151,13 +137,13 @@
     {
      "data": {
       "text/latex": [
-       "$b=1 \\ (x=1 ,y=1 )$"
+       "$b=1 \\ (y=1 ,x=1 )$"
       ],
       "text/plain": [
        "b"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "2bade12a-b912-436e-94f8-487727bb7f2f",
    "metadata": {
     "execution": {
@@ -187,44 +173,13 @@
        "OrderedDict([(0, 1), (1, 1), (2, 2)])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model.Ftree"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "838e8a01-0a55-49e0-a2cb-abac989efce5",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-07-16T22:41:55.486739Z",
-     "iopub.status.busy": "2022-07-16T22:41:55.486739Z",
-     "iopub.status.idle": "2022-07-16T22:41:55.495349Z",
-     "shell.execute_reply": "2022-07-16T22:41:55.495008Z",
-     "shell.execute_reply.started": "2022-07-16T22:41:55.486739Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(({0: ('x',), 1: ('x', 'y')}, {0: (1,), 1: ('a',)}),\n",
-       " (OrderedDict([(0, 1), (1, 1), (2, 2)]), {2: 1}, {}))"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "merge((edges,tree), edges_new, tree)"
    ]
   }
  ],
