--- a/minimdo/test_engine/compare_gen1mdao_torcheng.ipynb
+++ b/minimdo/test_engine/compare_gen1mdao_torcheng.ipynb
@@ -215,19 +215,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "2d69a563",
    "metadata": {},
    "outputs": [],
    "source": [
     "import openmdao.api as om\n",
-    "from problemgen.gen1.openmdao import buildidpvars, coupled_run\n",
-    "from problemgen.gen1.resultscheck import get_outputs, check_eqs"
+    "from engine.gen1mdao.openmdao import buildidpvars, coupled_run, get_outputs\n",
+    "from modeling.gen1.resultscheck import check_eqs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "f3f99b98",
    "metadata": {
     "execution": {
@@ -245,13 +245,13 @@
     "dins = default_in(eqs)\n",
     "buildidpvars(dins, model)\n",
     "counter = coupled_run(eqs, [], solve_order=(0,1,2,3), parent=model, \n",
-    "                      root=model, maxiter=20)\n",
+    "                      root=model, maxiter=100)\n",
     "prob.setup();"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "bed87095",
    "metadata": {
     "execution": {
@@ -271,7 +271,7 @@
       "======\n",
       "group1\n",
       "======\n",
-      "NL: Newton Converged in 7 iterations\n"
+      "NL: NewtonSolver 'NL: Newton' on system 'group1' failed to converge in 100 iterations.\n"
      ]
     }
    ],
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "9922d3a5",
    "metadata": {},
    "outputs": [
@@ -291,19 +291,19 @@
      "text": [
       "5 Explicit Output(s) in 'model'\n",
       "\n",
-      "varname  val         \n",
-      "-------  ------------\n",
+      "varname  val          \n",
+      "-------  -------------\n",
       "inp\n",
-      "  x      [2.]        \n",
+      "  x      [2.]         \n",
       "group1\n",
       "  eq0\n",
-      "    y    [4.]        \n",
+      "    y    [4.]         \n",
       "  eq1\n",
-      "    b    [1.16537304]\n",
+      "    b    [2.73540388] \n",
       "  eq2\n",
-      "    c    [1.35809433]\n",
+      "    c    [-4.04586028]\n",
       "  eq3\n",
-      "    a    [1.58268652]\n",
+      "    a    [2.36770194] \n",
       "\n",
       "\n",
       "0 Implicit Output(s) in 'model'\n",
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "61f4eafd",
    "metadata": {
     "execution": {
@@ -334,12 +334,12 @@
      "data": {
       "text/plain": [
        "{0: (4.0, 4.0),\n",
-       " 1: (1.1653730430698817, 1.1653730431232594),\n",
-       " 2: (1.3580943295139563, 1.3580943295139563),\n",
-       " 3: (1.5826865215616297, 1.5826865215616297)}"
+       " 1: (2.7354038824235736, 2.735403882423576),\n",
+       " 2: (-4.045860275955883, 7.48243439997796),\n",
+       " 3: (2.367701941211788, -11.067061906593034)}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,12 +366,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "e97b4f85",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modeling.compute import Evaluable\n",
+    "from modeling.gen1.compute import Evaluable\n",
     "from functools import reduce\n",
     "import numpy as np\n",
     "import scipy"
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "ce108d5d",
    "metadata": {
     "execution": {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "id": "66451b98",
    "metadata": {
     "execution": {
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "id": "4f982430",
    "metadata": {
     "execution": {
@@ -450,7 +450,7 @@
        "array([1.35809433, 1.58268652])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "id": "9485225d",
    "metadata": {},
    "outputs": [],
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "id": "05b648ab",
    "metadata": {},
    "outputs": [
@@ -490,7 +490,7 @@
        "tensor([2.0000, 1.5827, 1.3581, 1.0000, 1.0000], dtype=torch.float64)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 24,
    "id": "3247eec5",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
        "tensor([2.0000, 1.5827, 1.3581, 4.0000, 1.1654], dtype=torch.float64)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mdo",
+   "display_name": "minimdo",
    "language": "python",
    "name": "python3"
   },
@@ -553,11 +553,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.18"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "63364b8b09fa8bc3bb93c2fb70e282b5d0ec5f77fc4afa580dd0d6e30ea60b45"
-   }
   }
  },
  "nbformat": 4,
