--- a/minimdo/test_graph/test_workflow.ipynb
+++ b/minimdo/test_graph/test_workflow.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,10 @@
       "        create group:  0.1.3.4\n",
       "        default sequential solver for  0.1.3.4\n",
       "          add to  0.1.3.4  eq:  4\n",
-      "          add to  0.1.3.4  eq:  5\n",
+      "          create group:  0.1.3.4.5\n",
+      "          create system solver for  0.1.3.4.5\n",
+      "            add to  0.1.3.4.5  eq:  5\n",
+      "            add to  0.1.3.4.5  eq:  9\n",
       "          add to  0.1.3.4  eq:  6\n",
       "        add to  0.1.3  eq:  7\n",
       "      add to  0.1  eq:  8\n"
